--- a/isriti/keynote-speech--bpdp.tex
+++ b/isriti/keynote-speech--bpdp.tex
@@ -15,7 +15,7 @@
 \title{Decentralized Web}
 \subtitle{State of the Art and Future Challenges}
 \date{November 21, 2018}
-\author{Dr. Bambang Purnomosidi}
+\author{\textbf{Dr. Bambang Purnomosidi}}
 \institute{Informatics Engineering Department\\STMIK AKAKOM}
 \titlegraphic{\hfill\includegraphics[height=1.5cm]{isriti-logo.png}}
 
@@ -30,7 +30,7 @@
 
 \section{Introduction}
 
-\begin{frame}[fragile]{Metropolis}
+\begin{frame}[fragile]{What's Wrong Current Web?}
 
   The \themename theme is a Beamer theme with minimal visual noise
   inspired by the \href{https://github.com/hsrmbeamertheme/hsrmbeamertheme}{\textsc{hsrm} Beamer
