--- a/isriti/keynote-speech--bpdp.tex
+++ b/isriti/keynote-speech--bpdp.tex
@@ -28,21 +28,12 @@
   \tableofcontents[hideallsubsections]
 \end{frame}
 
-\section{Introduction}
+\section{Overview}
 
-\begin{frame}[fragile]{What's Wrong Current Web?}
+\begin{frame}[fragile]{Abstract}
 
-  The \themename theme is a Beamer theme with minimal visual noise
-  inspired by the \href{https://github.com/hsrmbeamertheme/hsrmbeamertheme}{\textsc{hsrm} Beamer
-  Theme} by Benjamin Weiss.
+  The Web is currently consists of many technologies, ecosystems, and virtual communities. In this talk, I will dicuss about the problems faced by current Web. Although Web isnever meant to be a centralized system, we are now face a more centralistic approach in the Web. In this talk, I will discuss about how this centralized Web might gives negative implication for society and what we can do about that to eliminate (or minimize) its negative impacts: decentralized Web. Next, I will outline current development in decentralized Web landscape. As an emerging knowledge domain, decentralized Web is still in its infancy and there are many tasks need to be done in realizing the decentralized Web. In the end, future research challenges in realizing the decentralized Web are discussed.
 
-  Enable the theme by loading
-
-  \begin{verbatim}    \documentclass{beamer}
-    \usetheme{metropolis}\end{verbatim}
-
-  Note, that you have to have Mozilla's \emph{Fira Sans} font and XeTeX
-  installed to enjoy this wonderful typography.
 \end{frame}
 \begin{frame}[fragile]{Sections}
   Sections group slides of the same topic
