--- a/isriti/keynote-speech--bpdp.tex
+++ b/isriti/keynote-speech--bpdp.tex
@@ -23,68 +23,84 @@
 
 \maketitle
 
-\begin{frame}{Table of contents}
+\begin{frame}[allowframebreaks]{Table of contents}
   \setbeamertemplate{section in toc}[sections numbered]
-  \tableofcontents[hideallsubsections]
+  \setbeamertemplate{subsection in toc}{\leavevmode\leftskip=3.2em\rlap{\hskip-2em\inserttocsectionnumber.\inserttocsubsectionnumber}\inserttocsubsection\par}
+  \tableofcontents
+  %\tableofcontents[hideallsubsections]
 \end{frame}
 
 \section{Introduction}
 
-\begin{frame}[fragile]{Overview}
+  \subsection{Overview}
+
+    \begin{frame}[fragile]{Overview}
 
   The World Wide Web (or the Web) is currently consists of many technologies, ecosystems, and virtual resources. Until now, most interactions on the Web happen between client and server. This situation leads to centralized Web where organzations and / or people put their services on the Web for mass consumption by clients. While this situation is normal, centralized Web gives negative impacts for society. Centralized Web gives power to service provider. By building Web to a more decentralized system, we may put power into clients / peers, therefore opening possibilities for customization and interoperability. The decentralized Web empowers creation and encourages participation, hence enable people to create, personalize, and share resources. This talk is a glimpse into pragmatic interoperability by exploiting possibilities from decentralized Web and how we might put pragmatic interoperability into our resources on the (decentralized) Web for the benefit of society as a whole.
 
-\end{frame}
+    \end{frame}
 
-\begin{frame}[allowframebreaks]{Web and Decentralized Web}
+  \subsection{Web and Decentralized Web}
 
-  asdsdfsdf
+    %\begin{frame}[allowframebreaks]{Web and Decentralized Web}
+    \begin{frame}[fragile]{Web and Decentralized Web}
 
-\end{frame}
+      asdsdfsdf
 
-\begin{frame}[fragile]{On Interoperability}
+    \end{frame}
 
-  asdsdfsdf
+  \subsection{Interoperability}
 
-\end{frame}
+    \begin{frame}[fragile]{Interoperability}
+
+      asdsdfsdf
+
+    \end{frame}
 
 \section{Interoperability on the Web}
 
-\begin{frame}[fragile]{Overview}
-  sdsds
-\end{frame}
+  \subsection{Syntactic Interoperability on the Web}
 
-\begin{frame}[fragile]{Syntactic Interoperability on the Web}
-sf
-\end{frame}
+    \begin{frame}[fragile]{Syntactic Interoperability on the Web}
+      sf
+    \end{frame}
 
-\begin{frame}[fragile]{Semantic Interoperability on the Web}
-sf
-\end{frame}
+  \subsection{Semantic Interoperability on the Web}
 
-\begin{frame}[fragile]{Pragmatic Interoperability on the Web}
-sf
-\end{frame}
+    \begin{frame}[fragile]{Semantic Interoperability on the Web}
+      sf
+    \end{frame}
 
-\begin{frame}[fragile]{Interoperability and Decentralized Web}
-sf
-\end{frame}
+  \subsection{Interoperability and Decentralized Web}
 
+    \begin{frame}[fragile]{Interoperability and Decentralized Web}
+      sf
+    \end{frame}
 
-\section{}
+\section{Pragmatic Interoperability and Decentralized Web}
 
-\begin{frame}{Web: Distributed, Centralized, or Decentralized}
-  asdasd
-\end{frame}
+  \subsection{Requirements for Pragmatic Interoperability}
 
-\begin{frame}[allowframebreaks]{sdfsdfsdf}
-  Questions?
-\end{frame}
+    \begin{frame}[fragile]{Requirements for Pragmatic Interoperability}
+      asdasd
+    \end{frame}
 
-\appendix
+  \subsection{Architecture of Decentralized Web Components for Pragmatic Interoperability}
 
-\begin{frame}[fragile]{sfsdfsdfs}
-  dssfdsdf
-\end{frame}
+    \begin{frame}[fragile]{Architecture of Decentralized Web Components for Pragmatic Interoperability}
+      sdfsfsdf
+    \end{frame}
+
+  \subsection{Impact for Society}
+
+    \begin{frame}[fragile]{Impact for Society}
+      sdf
+    \end{frame}
+
+  \subsection{Research Challenges}
+
+    \begin{frame}[fragile]{Research Challenges}
+      dssfdsdf
+    \end{frame}
 
 \end{document}
