--- a/isriti/keynote-speech--bpdp.tex
+++ b/isriti/keynote-speech--bpdp.tex
@@ -1,5 +1,7 @@
 \documentclass[10pt]{beamer}
 
+\usepackage{graphicx}
+
 \usetheme{metropolis}
 \usepackage{appendixnumberbeamer}
 
@@ -43,9 +45,15 @@
   \subsection{Web and Decentralized Web}
 
     %\begin{frame}[allowframebreaks]{Web and Decentralized Web}
-    \begin{frame}[fragile]{Web and Decentralized Web}
+    \begin{frame}[allowframebreaks]{Web and Decentralized Web}
 
-      asdsdfsdf
+      \begin{itemize}
+        \item Web is a platform which consists of front end resources (HTML, CSS, pictures, videos, JavaScript), rendered by Web browser. Those resources might be static or produced by backend processing. 
+        \item Current Web is distributed but mostly have centralized points of control.
+        \item This situation puts people in weak position compared with government, private companies or any other big organization. Sensor and surveillance from government are possible. Private companies may use people's data without their consent.
+        \item Many layers for people who want to create services and participate.
+      \end{itemize}
+
 
     \end{frame}
 
@@ -68,7 +76,7 @@
   \subsection{Semantic Interoperability on the Web}
 
     \begin{frame}[fragile]{Semantic Interoperability on the Web}
-      sf
+      Semantic interoperability is achieved when both side can exchange semantic data. 
     \end{frame}
 
   \subsection{Interoperability and Decentralized Web}
@@ -82,25 +90,47 @@
   \subsection{Requirements for Pragmatic Interoperability}
 
     \begin{frame}[fragile]{Requirements for Pragmatic Interoperability}
-      asdasd
+
+      \begin{itemize}
+        \item Pragmatics: study how context contributes to meaning. The ability to understand pragmatic in conversation is called \textbf{pragmatic competence}.
+        \item Client and service provider is said to be capable of doing contextual and pragmatic interactions if both side can accommodate context in conversation and both understand intention of each side within the same context.
+      \end{itemize}
+
     \end{frame}
 
   \subsection{Architecture of Decentralized Web Components for Pragmatic Interoperability}
 
     \begin{frame}[fragile]{Architecture of Decentralized Web Components for Pragmatic Interoperability}
-      sdfsfsdf
+
+      \begin{figure}[h]
+      \includegraphics[scale=0.4]{decweb-pragmatic-int}
+      \end{figure}
+
     \end{frame}
 
   \subsection{Impact for Society}
 
     \begin{frame}[fragile]{Impact for Society}
-      sdf
+      \begin{itemize}
+        \item More powerful clients, providing balance of power between any entities and people.
+        \item Difficult for censorship and surveillance
+        \item Robust: there is no single node which can take the whole network down.
+        \item Eliminate middleman, hence reduce costs and complexities
+        \item There are possiblities 
+      \end{itemize}
     \end{frame}
 
   \subsection{Research Challenges}
 
     \begin{frame}[fragile]{Research Challenges}
-      dssfdsdf
+      \begin{itemize}
+        \item Identity
+        \item Context taxonomy
+        \item Actor-based programming tools
+        \item Message interpreter
+        \item Semantic infrastructure
+        \item Interledger protocol
+      \end{itemize}
     \end{frame}
 
 \end{document}
