--- a/isriti/keynote-speech--bpdp.tex
+++ b/isriti/keynote-speech--bpdp.tex
@@ -45,7 +45,7 @@
   \subsection{Web and Decentralized Web}
 
     %\begin{frame}[allowframebreaks]{Web and Decentralized Web}
-    \begin{frame}[allowframebreaks]{Web and Decentralized Web}
+    \begin{frame}[fragile]{Web and Decentralized Web}
 
       \begin{itemize}
         \item Web is a platform which consists of front end resources (HTML, CSS, pictures, videos, JavaScript), rendered by Web browser. Those resources might be static or produced by backend processing. 
@@ -54,6 +54,18 @@
         \item Many layers for people who want to create services and participate.
       \end{itemize}
 
+    \end{frame}
+
+    \begin{frame}[fragile]{Let's Make the Web More Decentralized!}
+
+      To reach a mainstream status, there is no easy for decentralied Web. At the minimum, there has to be a smooth transition from current Web into a more decentralied system. How can we achieve that? At least there are two components which need to be exist:
+
+      \begin{itemize}
+        \item A protocol to replace HTTP so that people may put their resources online.
+        \item A browser for that protocol.
+      \end{itemize}
+
+      Enter \textbf{Dat} protocol and \textbf{Beaker Browser}. \textbf{Solid} (https://solid.inrupt.com/) also maybe of interest.
 
     \end{frame}
 
@@ -61,28 +73,45 @@
 
     \begin{frame}[fragile]{Interoperability}
 
-      asdsdfsdf
+      \textbf{Interoperability} is the ability of different computer system to exchange and make use data / information from each other. From linguistics point of view, it is the same as two different person are able to understand each other when they both send/receive messages. There are three components of interoperability:
+      \begin{itemize}
+        \item Syntactic interoperability: both nodes should agree on data serialization format
+        \item Semantic interoperability: both nodes can read the data serialization and know the "meaning" of that data (in context independent setting).
+        \item Pragmatic interoperablity: both nodes can understand context and intention of message from data / information that they both send/receive.
+      \end{itemize}
 
     \end{frame}
 
 \section{Interoperability on the Web}
 
+  \subsection{Interoperability and the Web}
+
+    \begin{frame}[fragile]{Interoperability and the Web}
+
+      When we talk about interoperability on the Web, we talk about machine to machine communication, not between human. This makes it possible to consume data and doing any automatic intelligent things with data.
+
+    \end{frame}
+
   \subsection{Syntactic Interoperability on the Web}
 
     \begin{frame}[fragile]{Syntactic Interoperability on the Web}
-      sf
+
+      Syntactic interoperability becomes a very basic interoperability on the Web. To achieve syntactic interoperability, data serialization format should be understood by each node. This has now becomes common: XML, JSON, BSON, MessagePack, Protocol Buffer, etc.
+
     \end{frame}
 
   \subsection{Semantic Interoperability on the Web}
 
     \begin{frame}[fragile]{Semantic Interoperability on the Web}
-      Semantic interoperability is achieved when both side can exchange semantic data. 
+      Semantic interoperability is achieved when both side can exchange and understand the "meaning" of data in a context independent setting. This has become a big concern since around 2001 when people realize that the Web is more for human then for machine. Since that time, many efforts have been done on putting ontology on the Web: DAML/OIL, OWL, OWL2, RDF, Linked Data, etc. 
     \end{frame}
 
   \subsection{Interoperability and Decentralized Web}
 
     \begin{frame}[fragile]{Interoperability and Decentralized Web}
-      sf
+
+      As the Web now becomes centralized, we rely on large-scale server-side infrastructures to perform intense reasoning, data mining, query execution, etc. By using decentralized (for example, using Dat protocol), we may put our resources online in a common data serialization format (syntactic interoperability) with ontology attached or linked data (semantic interoperability) if needed. These are all now can be under control of people and communities.
+
     \end{frame}
 
 \section{Pragmatic Interoperability and Decentralized Web}
@@ -90,11 +119,48 @@
   \subsection{Requirements for Pragmatic Interoperability}
 
     \begin{frame}[fragile]{Requirements for Pragmatic Interoperability}
-
       \begin{itemize}
         \item Pragmatics: study how context contributes to meaning. The ability to understand pragmatic in conversation is called \textbf{pragmatic competence}.
         \item Client and service provider is said to be capable of doing contextual and pragmatic interactions if both side can accommodate context in conversation and both understand intention of each side within the same context.
+        \item From here, there are 2 important components: \textbf{context} and \textbf{intention}
       \end{itemize}
+    \end{frame}
+
+    \begin{frame}[fragile]{Context}
+      \begin{itemize}
+        \item Context is any relevan data for service provisioning
+        \item Since client and service provider has their own context, interoperability becomes inherent problem
+        \item One may put context as global file inside his / her resources, and also put context for every resource inside a folder. Context should be described as \textbf{graph abstract data type} and this has to be defined as community consensus. 
+        \item Use JSON-LD might be used as a candidate to solve interoperability problem
+      \end{itemize}
+    \end{frame}
+
+    \begin{frame}[fragile]{Intention}
+
+In a message, \textit{intention} is known as \textit{illocutionary force}, while content of intention is known as \textit{propositional contents}. Communication is developed based on model~\ref{eqn:spcillo}.
+
+\begin{equation}\label{eqn:spcillo}
+  \boxed{f(p)}
+\end{equation}
+
+where:
+
+\begin{description}
+  \item[$f$] represent \textit{illocutionary force}
+  \item[$p$] represent \textit{propositional contents}
+\end{description}
+
+    \end{frame}
+
+    \begin{frame}[fragile]{Illocutionary Force}
+
+\begin{itemize}
+  \item \textit{Representatives}: states that something is true. This rule consists of \textit{assertive} (``ASSERT'' keyword) and \textit{informative} (``INFORM'' keyword).
+  \item \textit{Directives}: cause the hearer to take a particular action, consists only ``REQUEST'' keyword.
+  \item \textit{Commissives}: making a commitment, such as a promise or threat, by illocutionary means (such as ``I will buy if you give me 30 percent discounts'').
+  \item  \textit{Expressives}: express the speaker's attitudes and emotions towards the proposition, e.g. congratulations, excuses and thanks ( ``APOLOGIZE'', ``THANK'', and ``COMPLAIN'' keywords).
+  \item \textit{Declaratives}: change the reality in accord with the proposition of the declaration, e.g. pronouncing someone guilty or pronouncing someone husband and wife (``DECLARE'' keyword).
+\end{itemize}
 
     \end{frame}
 
@@ -116,7 +182,8 @@
         \item Difficult for censorship and surveillance
         \item Robust: there is no single node which can take the whole network down.
         \item Eliminate middleman, hence reduce costs and complexities
-        \item There are possiblities 
+        \item Decentralized data analytics.
+        \item Total control of data in people
       \end{itemize}
     \end{frame}
 
@@ -124,12 +191,12 @@
 
     \begin{frame}[fragile]{Research Challenges}
       \begin{itemize}
-        \item Identity
-        \item Context taxonomy
+        \item (Global) Identity and an official identity mapping with offline ID
+        \item Context taxonomy and management
         \item Actor-based programming tools
         \item Message interpreter
         \item Semantic infrastructure
-        \item Interledger protocol
+        \item InterLedger protocol
       \end{itemize}
     \end{frame}
 
