Finish for ISRITI 2018 slides - fix typo

--- a/isriti/keynote-speech--bpdp.tex
+++ b/isriti/keynote-speech--bpdp.tex
@@ -14,7 +14,7 @@
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
-\title{A Future Persepective:}
+\title{A Future Perspective:}
 \subtitle{Exploiting Decentralized Web for Pragmatic Interoperability}
 \date{November 21, 2018}
 \author{\textbf{Dr. Bambang Purnomosidi}}
